[gd_scene load_steps=14 format=2]

[ext_resource path="res://scripts/BG.gd" type="Script" id=1]
[ext_resource path="res://assets/graphics/level_bg/BG.png" type="Texture" id=2]
[ext_resource path="res://assets/godot_res/scrolling.gdshader" type="Shader" id=3]
[ext_resource path="res://assets/graphics/particles/light_sprite.png" type="Texture" id=5]

[sub_resource type="ShaderMaterial" id=6]
shader = ExtResource( 3 )
shader_param/x_scroll = 120.0
shader_param/y_scroll = 80.0

[sub_resource type="CanvasItemMaterial" id=7]
blend_mode = 2
light_mode = 1

[sub_resource type="CanvasItemMaterial" id=8]
blend_mode = 2
light_mode = 1

[sub_resource type="CanvasItemMaterial" id=9]
blend_mode = 2
light_mode = 1

[sub_resource type="Curve" id=10]
max_value = 2.0
bake_resolution = 20
_data = [ Vector2( 0, 0 ), 0.0, 0.0, 0, 0, Vector2( 0.151703, 1.50242 ), 4.4589, 4.4589, 0, 0, Vector2( 0.54104, 1.74041 ), -1.79753, -1.79753, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="Gradient" id=11]
interpolation_mode = 2
offsets = PoolRealArray( 0, 0.5, 1 )
colors = PoolColorArray( 0, 0, 0, 0, 0.571178, 0.565816, 0.542173, 1, 0, 0, 0, 0 )

[sub_resource type="CanvasItemMaterial" id=12]
blend_mode = 1
light_mode = 1

[sub_resource type="PhysicsMaterial" id=3]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 360.5, 10 )

[node name="BG" type="Node2D"]
script = ExtResource( 1 )

[node name="BG_static" type="CanvasLayer" parent="."]
layer = -1

[node name="BG_main" type="Sprite" parent="BG_static"]
modulate = Color( 0.65098, 0.686275, 0.901961, 0.886275 )
light_mask = 0
material = SubResource( 6 )
position = Vector2( 160, 340 )
rotation = 6.28319
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 2 )

[node name="BG2_mix" type="Sprite" parent="BG_static"]
modulate = Color( 0.588235, 0.470588, 0.513726, 0.0980392 )
material = SubResource( 7 )
position = Vector2( 160, 340 )
scale = Vector2( 0.6, 0.9 )
z_index = 2

[node name="BG_object" type="CanvasLayer" parent="."]
layer = 0
follow_viewport_enable = true

[node name="BG3_detail" type="Sprite" parent="BG_object"]
unique_name_in_owner = true
modulate = Color( 0.682353, 0.411765, 0.686275, 0.321569 )
light_mask = 0
material = SubResource( 8 )
position = Vector2( 158, 342 )
rotation = 0.785398
scale = Vector2( 6.2, 6.2 )

[node name="Holder" type="Node2D" parent="BG_object"]
position = Vector2( 158, 340 )

[node name="BG_particles" type="CPUParticles2D" parent="BG_object/Holder"]
light_mask = 0
material = SubResource( 9 )
amount = 6
lifetime = 8.0
speed_scale = 0.2
randomness = 1.0
lifetime_randomness = 0.2
texture = ExtResource( 5 )
emission_shape = 1
emission_sphere_radius = 16.0
direction = Vector2( 0.19, 0.19 )
spread = 180.0
gravity = Vector2( 0, 0 )
initial_velocity = 0.01
orbit_velocity = 0.02
linear_accel = 12.0
radial_accel = 0.04
tangential_accel = 0.08
damping = 0.1
damping_random = 0.06
angle_random = 1.0
scale_amount = 0.26
scale_amount_curve = SubResource( 10 )
color = Color( 1, 1, 1, 0.54902 )
color_ramp = SubResource( 11 )
hue_variation = 0.32
hue_variation_random = 0.06

[node name="BG_particles2" type="CPUParticles2D" parent="BG_object/Holder"]
light_mask = 0
material = SubResource( 12 )
amount = 4
lifetime = 6.0
speed_scale = 0.25
randomness = 1.0
lifetime_randomness = 0.2
texture = ExtResource( 5 )
emission_shape = 1
emission_sphere_radius = 20.0
direction = Vector2( 0.19, 0.19 )
spread = 180.0
gravity = Vector2( 0, 0 )
initial_velocity = 0.01
orbit_velocity = 0.02
linear_accel = 12.0
radial_accel = 0.04
tangential_accel = 0.08
damping = 0.1
damping_random = 0.06
angle_random = 1.0
scale_amount = 0.26
scale_amount_curve = SubResource( 10 )
color = Color( 0.145098, 0.027451, 0.027451, 0.54902 )
color_ramp = SubResource( 11 )
hue_variation = 0.32
hue_variation_random = 0.06

[node name="walls" type="StaticBody2D" parent="BG_object/Holder"]
position = Vector2( -160, -340 )
collision_layer = 4
collision_mask = 0
physics_material_override = SubResource( 3 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="BG_object/Holder/walls"]
position = Vector2( -196, 339 )
rotation = -1.5708
z_index = 1
shape = SubResource( 2 )

[node name="CollisionShape2D4" type="CollisionShape2D" parent="BG_object/Holder/walls"]
position = Vector2( 501, 339 )
rotation = -1.5708
z_index = 1
shape = SubResource( 2 )

[node name="CollisionShape2D5" type="CollisionShape2D" parent="BG_object/Holder/walls"]
position = Vector2( 152, -31 )
z_index = 1
shape = SubResource( 2 )

[node name="CollisionShape2D6" type="CollisionShape2D" parent="BG_object/Holder/walls"]
position = Vector2( 152, 710 )
z_index = 1
shape = SubResource( 2 )
